js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-typeof-import-source.js
DONOTEVALUATE
(
)
;
do
{
typeof
import
.
source
;
}
while
(
false
)
;
